--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,18 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+/>
+<script
+  src="https://kit.fontawesome.com/5e3207b59b.js"
+  crossorigin="anonymous"
+></script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
+      font-size: 16px;
       margin: 0;
     }
   </style>
