--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
       rel="stylesheet"
     />
     <!-- Bootstrap -->
-    <!-- <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    /> -->
+    />
     <script
       src="https://kit.fontawesome.com/5e3207b59b.js"
       crossorigin="anonymous"
